--- a/css/style.css
+++ b/css/style.css
@@ -191,21 +191,21 @@ img{
 }
 
 #slide4-right-text-toggle{
-	z-index: 2;
-	position: absolute;
-	right:calc(50% + 15px);
-	bottom: 10px;
-	width: 35px;
-	height: 35px;
-	background-image: url("../img/play.png");
-	background-repeat: no-repeat;
-	background-size: 35px 35px;
-	background-position: center center;
-	border:1px solid #ffffff;
-	transform:rotate(270deg);
-    -moz-transition:1s all;
-    -webkit-transition:1s all;
-		transition: 1s all;
+		z-index: 2;
+		position: absolute;
+		right:calc(50% + 15px);
+		bottom: 10px;
+		width: 35px;
+		height: 35px;
+		background-image: url("../img/play.png");
+		background-repeat: no-repeat;
+		background-size: 35px 35px;
+		background-position: center center;
+		border:1px solid #ffffff;
+		transform:rotate(270deg);
+    -moz-transition:500ms all;
+    -webkit-transition:500ms all;
+		transition: 500ms all;
 }
 
 #slide4-right-text-toggle:hover{
